objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>BPT_Email__c</fullName>
        <description>Brown Paper Tickets buyer&apos;s email address. Text field because BPT does not validate emails.</description>
        <label>Email</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BPT_Event_ID__c</fullName>
        <description>Brown Paper Tickets event ID that this ticket purchase Opportunity is associated with.</description>
        <inlineHelpText>Brown Paper Tickets Event ID</inlineHelpText>
        <label>BPT Event ID</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <description>Brown Paper Tickets buyer&apos;s city.</description>
        <label>City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Tickets__c</fullName>
        <description>Number of Brown Paper Tickets purchased.</description>
        <label>Number of Tickets</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OrderNumber__c</fullName>
        <label>Order Number</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone_Number__c</fullName>
        <description>Brown Paper Tickets buyer&apos;s phone number.</description>
        <label>Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <description>Brown Paper Tickets buyer&apos;s 2-digit State code.</description>
        <label>State</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street_Address__c</fullName>
        <description>Brown Paper Tickets buyer street address.</description>
        <label>Street Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ticket_Number__c</fullName>
        <description>Brown Paper Tickets order ticket number.</description>
        <label>Ticket Number</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip_Code__c</fullName>
        <description>Brown Paper Tickets&apos; buyer zip code.</description>
        <label>Zip Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
</CustomObject>